fix: add spacing

--- a/frontend/src/components/product-details-page/ProductDetails.scss
+++ b/frontend/src/components/product-details-page/ProductDetails.scss
@@ -1,5 +1,4 @@
 @import '../../variables';
 
 .product-details {
-  margin-left: 2em;
 }
